UI alignment fix

--- a/recapifyy/src/Homepage.css
+++ b/recapifyy/src/Homepage.css
@@ -29,13 +29,12 @@
     color: black;
     font-size: 18px;
     font-weight: bold;
-    
-
+    margin-left: auto;
+    margin-right: 20px;
   }
   
   .content {
     display: flex;
-    flex-wrap : wrap;
     justify-content: space-between;
     padding: 20px;
     
@@ -60,16 +59,18 @@
     margin: 0;
 
   }
-  /* .flex-container {
-    display:flex;
-  } */
+  .flex-container {
+    /* display:flex; */
+    flex-grow: 1;
+    margin-right: 175px;
+  }
   
   .file-upload-container {
-    width: 600px; 
-  max-width: calc(100% - 40px); 
-  margin-left: auto;
-  margin-right: auto;
-   
+    /* width: 600px;  */
+    max-width: calc(100% - 40px); 
+    margin-left: auto;
+    margin-right: auto;
+    flex-basis: auto;
   }
   
   .file-input {
@@ -89,7 +90,7 @@
 }
 
 .file-upload-section,
-.button-group , .Summary-textbox
+.Summary-textbox
 {
   flex-grow: 1;
   margin-right: 175px;
@@ -124,21 +125,20 @@
     list-style: none;
     padding: 0;
   }
+  
   .button-group {
-    position: absolute;
-    bottom: 20px;
-    left: 54%; 
-   transform: translateX(-50%);
+    padding-top: 20px;
     display: flex;
-    gap : 20px; 
+    justify-content: space-between;
   }
   
   .button-group button {
     background-color: #a56b65;
     color: black;
     padding: 10px 20px;
+    margin: 0 10px;
     border: none;
-   border-radius: 5px;
-   cursor: pointer;
-   transition: background-color 0.3s ease; 
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
   }
