--- a/recapifyy/src/Login.css
+++ b/recapifyy/src/Login.css
@@ -5,13 +5,16 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+    align-items: center;
   }
 
   .login-container .logo {
     max-width: 100%; 
     margin-bottom: 20px; 
-  }
-  
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+}
   
   .login-container h2 {
     text-align: center;
